# HPC-Projekt

./: CMakeLists.txt  README.md  Tätigkeitsnachweis.md  ant.c  ant.h  run.sh
Bericht/: .gitignore  main.tex  sources.bib
Bericht/chapters/: 00-titlepage.tex  001-Abkuerzungen.tex  01-Einleitung.tex  02-Hauptteil.tex  03-Schluss.tex
Bericht/images/: Speicherzugriff-optimiert.drawio  Speicherzugriff.drawio  struktog-optimiert.json
cities/: csv-input.c  csv-input.h
cities/10/: cities10.c  cities10.h
cities/5/: cities5.c  cities5.h
cities/data/: 10.csv  100.csv  200.csv  25.csv  400.csv  50.csv  generated_cities.csv
opencl/: CMakeLists.txt  Makefile  Notes.md  ant.c  ant.h  config.h  opencl-program.cl  opencl-skeleton.c
openmp/: CMakeLists.txt  Makefile  ant.c  ant.h
plain_c/: CMakeLists.txt  Makefile  ant.c  ant.h
